--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Localhost iFrame Example</title>
+    <title>Insights</title>
     <style>
         #contentIframe {
             border: none;
@@ -16,6 +16,7 @@
     <script>
         let dataset_id = null;
         let project_id = null;
+        console.log('1 before onload')
 
         window.onload = function () {
             console.log('1 whaaaaaaa')
@@ -26,12 +27,13 @@
             async function init() {
                 await window.dl.on('ready', async () => {
                     console.log('ready')
+                    await main()
                     const settings = await this.dl.settings.get();
-                    changeIframeTheme(theme)
+                    changeIframeTheme(settings.theme)
                     await window.dl.on('theme', (data) => {
                         changeIframeTheme(data);
                     })
-                    await main()
+                    
                 })
             }
             init()
@@ -60,7 +62,7 @@
 
             dataset_id = (await window.dl.datasets.get()).id;
             console.log('2 whaaaaaaa', dataset_id)
-            document.getElementById("contentIframe").src = '/insights/build/' + dataset_id;
+            document.getElementById("contentIframe").src = `/insights/build/${dataset_id}`
         }
 
     </script>
