update to single server

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
     <script src="https://rc-con.dataloop.ai/dlAppLib.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   </body>
 </html>
